src/test/compile-fail/unique-unique-kind.rs
fn f<T: Send>(_i: T) {
}

fn main() {
    let i = ~@100;
    f(move i); //~ ERROR missing `send`
}
